--- a/MVCLogin/MVCLogin/Views/Shared/Info.cshtml
+++ b/MVCLogin/MVCLogin/Views/Shared/Info.cshtml
@@ -1,7 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Info";
+    ViewBag.Title = "Message";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-@ViewBag.Link
+
+<h1 class="text-info">@ViewBag.Title</h1>
+@{
+    if (String.IsNullOrEmpty(ViewBag.errorMessage))
+    {
+        <h3 class="text-danger">An error occurred while processing your request.</h3>
+    }
+    else
+    {
+        <h3 class="text-success">@ViewBag.errorMessage</h3>
+    }
+}
 
