--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Create.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "UserModels", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -34,15 +34,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserEmailPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UserEmailPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.UserEmailPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserEmailPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProfilePictureURL, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProfilePictureURL, "Image", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProfilePictureURL, new { htmlAttributes = new { @class = "form-control" } })
+                @*ProfilePictureFileUpload*@
+                <input id="file" name="file" type="file" class="form-control" />
                 @Html.ValidationMessageFor(model => model.ProfilePictureURL, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProfilePictureURLPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProfilePictureURLPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.ProfilePictureURLPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProfilePictureURLPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -90,7 +91,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AddressPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AddressPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.AddressPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AddressPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -106,7 +107,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PhoneNumberPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumberPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.PhoneNumberPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PhoneNumberPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -122,7 +123,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirthPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfBirthPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.DateOfBirthPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateOfBirthPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -130,7 +131,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Skills, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Skills, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Skills, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Skills, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -138,7 +139,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SkillsPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SkillsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.SkillsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SkillsPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -146,7 +147,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Certificates, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Certificates, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Certificates, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Certificates, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -154,7 +155,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CertificatesPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CertificatesPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.CertificatesPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CertificatesPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -162,15 +163,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Memberships, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Memberships, new { htmlAttributes = new { @class = "form-control" } })
+                
+                @Html.TextAreaFor(model => model.Memberships, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Memberships, "", new { @class = "text-danger" })
-            </div>
+                </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.MembershipsPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MembershipsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.MembershipsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MembershipsPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -178,7 +180,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Experience, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -186,7 +188,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ExperiencePrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ExperiencePrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.ExperiencePrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ExperiencePrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
