--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
@@ -36,23 +36,24 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserEmailPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UserEmailPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.UserEmailPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserEmailPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProfilePictureURL, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProfilePictureURL, "Image", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProfilePictureURL, new { htmlAttributes = new { @class = "form-control" } })
+                @*ProfilePictureFileUpload*@
+                <input id="file" name="file" type="file" class="form-control" />
                 @Html.ValidationMessageFor(model => model.ProfilePictureURL, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
         <div class="form-group">
             @Html.LabelFor(model => model.ProfilePictureURLPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProfilePictureURLPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.ProfilePictureURLPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProfilePictureURLPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -92,7 +93,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AddressPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AddressPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.AddressPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AddressPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -108,7 +109,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PhoneNumberPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumberPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.PhoneNumberPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PhoneNumberPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -124,7 +125,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirthPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfBirthPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.DateOfBirthPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateOfBirthPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -132,7 +133,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Skills, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Skills, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Skills, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Skills, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -140,7 +141,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SkillsPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SkillsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.SkillsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SkillsPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -148,7 +149,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Certificates, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Certificates, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Certificates, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Certificates, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -156,7 +157,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CertificatesPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CertificatesPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.CertificatesPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CertificatesPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -164,7 +165,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Memberships, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Memberships, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Memberships, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Memberships, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -172,7 +173,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MembershipsPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MembershipsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.MembershipsPrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MembershipsPrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -180,7 +181,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Experience, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -188,7 +189,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ExperiencePrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ExperiencePrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.ExperiencePrivacySetting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ExperiencePrivacySetting, "", new { @class = "text-danger" })
             </div>
         </div>
