--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Index.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Index.cshtml
@@ -92,8 +92,8 @@
             @Html.DisplayFor(modelItem => item.UserEmailPrivacySetting)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ProfilePictureURL)
-        </td>
+            <img src="../../@Html.DisplayFor(modelItem => item.ProfilePictureURL)" style="height:150px; width:150px"/>
+         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ProfilePictureURLPrivacySetting)
         </td>
