Put user information onto tabs, added calendar for date, added some css

--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Delete.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Delete.cshtml
@@ -40,7 +40,7 @@
         </dt>
 
         <dd>
-            <img src="../../@Html.DisplayFor(model => model.BookImageURL)" style="height:150px; width:150px" />
+            <img src="../../@Html.DisplayFor(model => model.ProfilePictureURL)" style="height:150px; width:150px" />
         </dd>
 
         <dt>
