--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_LoginPartial.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,9 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    @Html.ActionLink("Blog", "Index", "Blog");
+                </li>
+                <li>
                     @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Create", "UserProfile", routeValues: null, htmlAttributes: new { title = "Manage" })
                 </li>
                 <li>
