added "file type" to uploads model/view/controller

--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Details.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Details.cshtml
@@ -57,7 +57,12 @@
         <dd>
             @Html.DisplayFor(model => model.UploadFileUrlPrivacySetting)
         </dd>
-
+        <dd>
+            @Html.DisplayNameFor(model => model.FileType)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.FileType)
+        </dd>
     </dl>
 </div>
 <p>
