--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Create.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Create.cshtml
@@ -48,7 +48,7 @@
         </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UploadFileUrl, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UploadFileUrl, "File Upload", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="file" name="file" class="form-control" />
                 @Html.ValidationMessageFor(model => model.UploadFileUrl, "", new { @class = "text-danger" })
@@ -56,10 +56,29 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UploadFileUrlPrivacySetting, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UploadFileUrlPrivacySetting, "File Privacy", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.UploadFileUrlPrivacySetting, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UploadFileUrlPrivacySetting, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-10">
+                @Html.LabelFor(model => model.FileType, "File Type", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                <label>
+                    @Html.RadioButtonFor(model => model.FileType, "Text")
+                    <span>Text</span>
+                </label>
+                <label>
+                    @Html.RadioButtonFor(model => model.FileType, "Photo")
+                    <span>Photo</span>
+                </label>
+                <label>
+                    @Html.RadioButtonFor(model => model.FileType, "Video")
+                    <span>Video</span>
+                </label>
             </div>
         </div>
 
