--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Delete.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Delete.cshtml
@@ -58,7 +58,12 @@
         <dd>
             @Html.DisplayFor(model => model.UploadFileUrlPrivacySetting)
         </dd>
-
+        <dd>
+            @Html.DisplayNameFor(model => model.FileType)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.FileType)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
