--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Index.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Index.cshtml
@@ -29,6 +29,9 @@
         <th>
             @Html.DisplayNameFor(model => model.UploadFileUrlPrivacySetting)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FileType)
+        </th>
         <th></th>
     </tr>
 
@@ -52,6 +55,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UploadFileUrlPrivacySetting)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FileType)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.UploadsID }) |
