minor css changes

--- a/SDStudentPortal/SDStudentPortal/Views/Home/About.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Home/About.cshtml
@@ -1,7 +1,17 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Roberston College";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+@*Copied from Robertson College website*@
+Robertson College, a member of Education Consolidation Corporation, is committed to our students’ 
+success in their new chosen careers through quality instruction, tailored curriculums, and dedicated 
+Career Counsellors, Student Services, Financial Advisors and Career Services teams that are committed 
+to helping each student achieve their goals.
+
+Robertson College offers a broad range of in demand career-focused programs in Business, Health Care and 
+IT across 4 campuses in Canada.  Robertson College currently has campuses in Calgary and Edmonton in 
+Alberta as well as in Winnipeg and Brandon in Manitoba.  Each campus offers programs that are tailored 
+for their local job market.  Our Online campus offers distance education to students all across Canada, 
+allowing them to earn their diplomas and certificates completely online while still benefiting from the 
+same support and career services offered to our campus students.
