--- a/SDStudentPortal/SDStudentPortal/Views/Home/Contact.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Home/Contact.cshtml
@@ -1,17 +1,21 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact Us";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+<address><br />
+        Main Campus<br/>
+        265 Notre Dame Ave<br/>
+        Winnipeg, Manitoba, Canada<br/>
+        R3B 1N9<br/>
+    <br/>
+        433 Main Street - 13th Floor<br />
+        Winnipeg, Manitoba, Canada<br />
+        R3B 1B3<br />
+    <br />
+        Tel: 204-926-8389<br />
+        Fax: 204-926-8320<br />
+        TollFree: 888-892-5262<br />
+        Email:
+        <a href="mailto:info@robertsoncollege.com">info@robertsoncollege.com</a>
 </address>
