--- a/SDStudentPortal/SDStudentPortal/Views/Account/ConfirmEmail.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Home", "Index", "Home", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Thank you for confirming your email. Please @Html.ActionLink("click here to complete the registration.", "Create", "UserModels", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
