--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
           rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/base/jquery.ui.theme.css")"
           rel="stylesheet" type="text/css" />
-
     <script src="@Url.Content("~/Scripts/jquery.ui.core.min.js")"
             type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
@@ -34,7 +33,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("User Information", "Index", "UserModels")</li>
+                    <li>@Html.ActionLink("User Info", "Index", "UserModels")</li>
                     <li>@Html.ActionLink("Uploads", "Index", "Uploads")</li>
                     <li>@Html.ActionLink("Blogs", "Index", "Blog")</li>
                     <li>@Html.ActionLink("About Us", "About", "Home")</li>
