--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
@@ -9,6 +9,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="col-lg-12 col-sm-12">
