--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Robertson College - Software Developpers</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    <link href="@Url.Content("~/Content/themes/base/jquery.ui.core.css")"
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+        @Scripts.Render("~/bundles/modernizr")
+            @Scripts.Render("~/bundles/bootstrap")
+            @Scripts.Render("~/bundles/datepicker")
+
+    @*<link href="@Url.Content("~/Content/themes/base/jquery.ui.core.css")"
           rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/base/jquery.ui.datepicker.css")"
           rel="stylesheet" type="text/css" />
@@ -17,7 +22,7 @@
     <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
             type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/DatePickerReady.js")"
-            type="text/javascript"></script>
+            type="text/javascript"></script>*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
