update for load image for tree view plus minus

--- a/SDStudentPortal/SDStudentPortal/Content/Custom.css
+++ b/SDStudentPortal/SDStudentPortal/Content/Custom.css
@@ -350,7 +350,7 @@ a{
     padding: 0 0 0 28px;
 }
 .tree li.parent > a:before {
-    background-image: url("../image/plus_minus_icons.png");
+    background-image: url("../Images/plus_minus_icons.png");
     background-position: 25px center;
      content: ""; 
     display: block;
