--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Robertson College - Software Developpers</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/jqueryval")
         @Scripts.Render("~/bundles/modernizr")
-            @Scripts.Render("~/bundles/bootstrap")
-            @Scripts.Render("~/bundles/datepicker")
-
+        @Scripts.Render("~/bundles/bootstrap")
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     @*<link href="@Url.Content("~/Content/themes/base/jquery.ui.core.css")"
           rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/base/jquery.ui.datepicker.css")"
@@ -20,8 +19,6 @@
     <script src="@Url.Content("~/Scripts/jquery.ui.core.min.js")"
             type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
-            type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/DatePickerReady.js")"
             type="text/javascript"></script>*@
 </head>
 <body>
