--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_IndexPartialPrivate.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_IndexPartialPrivate.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple<IEnumerable<SDStudentPortal.Models.Blog>, IEnumerable<SDStudentPortal.Models.BlogComment>>
+﻿@model Tuple<IEnumerable<SDStudentPortal.Models.Blog>, IEnumerable<SDStudentPortal.Models.BlogComment>,SDStudentPortal.Models.UserModel>
 
 <link href="~/Content/Custom.css" rel="stylesheet" />
 
