--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_IndexPartialPublic.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_IndexPartialPublic.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple<IEnumerable<SDStudentPortal.Models.Blog>, IEnumerable<SDStudentPortal.Models.BlogComment>, SDStudentPortal.Models.UserModel>
+﻿@model Tuple<IEnumerable<SDStudentPortal.Models.Blog>, IEnumerable<SDStudentPortal.Models.BlogComment>>
 
 
 <dl class="dl-horizontal">
