added search to uploads page. created new search users page. changed users index to admin index (need to add admin validation) registering usermodel now foreign keys to user

--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("User Info", "Index", "UserModels")</li>
+                    <li>@Html.ActionLink("User Info", "Edit", "UserModels")</li>
                     <li>@Html.ActionLink("Uploads", "Index", "Uploads")</li>
                     <li>@Html.ActionLink("Blogs", "Index", "Blog")</li>
                     <li>@Html.ActionLink("About Us", "About", "Home")</li>
