--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/AdminIndex.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/AdminIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SDStudentPortal.Models.UserModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "AdminIndex";
 }
 
 <h2>Index</h2>
