--- a/SDStudentPortal/SDStudentPortal/Content/bootstrap.css
+++ b/SDStudentPortal/SDStudentPortal/Content/bootstrap.css
@@ -4382,7 +4382,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
     margin-left: 15px;
   }
 }
-
+/*navbar*/
 .navbar-default {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
