--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Create.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Create.cshtml
@@ -57,6 +57,9 @@
             <div class="well">
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="tab1">
+                        <div>
+                            @Html.HiddenFor(model => model.UserModelID, new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
                         <div class="form-group">
                             @Html.Label("First Name", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
