bug fixes on edit for profile picture upload. add user search

--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link href="~/Content/CustomBootstrap.css" rel="stylesheet" />
+    <link href="~/Content/StyleSheet1.css" rel="stylesheet" />    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Robertson College - Software Developpers</title>
