--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Create.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model SDStudentPortal.Models.UserModel
-<link href="~/StyleSheet1.css" rel="stylesheet" />
+<link href = "~/Content/StyleSheet1.css" rel = "stylesheet" />
+
 <script>
     $(document).ready(function () {
         $(".btn-pref .btn").click(function () {
