--- a/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/UserModels/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Edit";
 }
-<link href="~/StyleSheet1.css" rel="stylesheet" />
+<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
 <h2>Edit</h2>
 
 
