--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -8,21 +8,10 @@
     <title>@ViewBag.Title - Robertson College - Software Developpers</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="@Url.Content("~/Content/themes/base/jquery.ui.core.css")"
-          rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Content/themes/base/jquery.ui.datepicker.css")"
-          rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Content/themes/base/jquery.ui.theme.css")"
-          rel="stylesheet" type="text/css" />
 
-    <script src="@Url.Content("~/Scripts/jquery.ui.core.min.js")"
-            type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
-            type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/DatePickerReady.js")"
-            type="text/javascript"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
