--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
     <link href="@Url.Content("~/Content/themes/base/jquery.ui.theme.css")"
           rel="stylesheet" type="text/css" />
 
+    <link href="~/Content/CustomBootstrap.css" rel="stylesheet" />
+    <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
+
     <script src="@Url.Content("~/Scripts/jquery.ui.core.min.js")"
             type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.min.js")"
