--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Search Users","SearchUsers","UserModels")</li>
                     <li>@Html.ActionLink("User Info", "Edit", "UserModels")</li>
                     <li>@Html.ActionLink("Uploads", "Index", "Uploads")</li>
                     <li>@Html.ActionLink("Project","Index","Projects")</li>
