--- a/SDStudentPortal/SDStudentPortal/Views/Projects/Edit.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Projects/Edit.cshtml
@@ -1,28 +1,65 @@
 ﻿@model SDStudentPortal.Models.Project
 
 @{
+    var ProjectFile = (List<SDStudentPortal.Models.Uploads>)ViewBag.ProjectFile;
     ViewBag.Title = "Edit";
+    var grid = new WebGrid(ViewBag.ProjectFile, canPage: true, rowsPerPage: 5,
+    selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent");
+    grid.Pager(WebGridPagerModes.NextPrevious);
+    
 }
+
+<style type="text/css">
+    .webGrid {
+        margin: 4px;
+        border-collapse: collapse;
+        width: 500px;
+        background-color: #B4CFC3;
+    }
+
+    .header {
+        background-color: #C1D4E6;
+        font-weight: bold;
+        color: #FFF;
+    }
+
+    .webGrid th, .webGrid td {
+        border: 1px solid #C0C0C0;
+        padding: 5px;
+    }
+
+    .alt {
+        background-color: #E4E9F5;
+        color: #000;
+    }
+
+    .gridHead a:hover {
+        text-decoration: underline;
+    }
+
+    .description {
+        width: auto;
+    }
+
+    .select {
+        background-color: #71857C;
+    }
+</style>
 
 <h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Project</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        
         @Html.HiddenFor(model => model.ProjectID)
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+        @Html.HiddenFor(model => model.UserId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -35,16 +72,31 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", rows = "5" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.files, "Files", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Add File to Project", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.ListBoxFor(model => model.files, null, htmlAttributes: new { @class = "form-control", @size = 5 })
+                @Html.ActionLink("Add File to Project", "Create", "Uploads", new { ProjectID = @Model.ProjectID }, null)
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.Label("Files")
+            <div id="col-md-10">
+                @grid.GetHtml(tableStyle: "webGrid",
+            headerStyle: "header",
+            alternatingRowStyle: "alt",
+            selectedRowStyle: "select",
+            columns: grid.Columns(
+                grid.Column("UploadsID", "ID"),
+                grid.Column("Title", "Title"),
+                grid.Column("UploadFileUrl","File",format: @<text><img src="@item.UploadFileUrl" /></text>)
+
+         ))
             </div>
         </div>
 
@@ -55,7 +107,6 @@
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
